# workflow_tests

./: .gitignore  Dockerfile  README.md  main.py  setup.cfg
.github/tmp/: bandit copy.yaml  bandit.yaml  black copy.yaml  coveralls.yaml  external.yaml  flake8 copy.yaml  flake8.yaml  format.yaml  mypy.yaml  pylint.yaml  pytest copy.yaml
.github/workflows/: bandit.yaml  black.yaml  coveralls.yaml  external.yaml  flake8.yaml  format.yaml  ghcr.yaml  helloworld.yaml  isort.yaml  mypy.yaml  pylint.yaml  pylint.yml  pytest.yaml  radon.yaml  ruff.yaml  safety.yaml
app/: app.py
app/templates/: index.html
src/: main.py
src/module_one/: one.py
src/module_two/: two.py
tests/unit/: test_one.py  test_two.py
