[metadata]
name = workflow_tests
description = workflow tests for github actions
long_description = file: README.md
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src

install_requires =
    requests


[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc
    test

[options.extras_require]
dev =
    bandit
    black
    flake8
    mypy
    pylint
    pytest
    types-requests
